margin to center

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ ul {
 /*  position: absolute;*/
   text-align: left;
 /*  display: inline;*/
-  margin: 12px 33%;
+  margin: 0 auto;
   padding: 6px;
   list-style: none;
   -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
