fonts padding etc

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@ ul {
   -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
   top: 350px;
-  width: 394px;
+  width: 515px;
 }
 ul li {
-  font: bold 12px/18px sans-serif;
+  font: bold 15px sans-serif;
   display: inline-block;
   margin-right: -4px;
   position: relative;
-  padding: 15px 17px;
+  padding: 15px 25px;
   background: #fff;
   cursor: pointer;
   -webkit-transition: all 0.2s;
@@ -73,10 +73,10 @@ ul li:hover {
 ul li ul {
   padding: 0;
   position: absolute;
-  top: 35px;
+  top: 48px;
 /*  top: 48px;*/
-  left: -33%;
-  width: 116px;
+  left: 0%;
+  width: 154px;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
