--- a/tango.html
+++ b/tango.html
@@ -6,49 +6,68 @@
     <script type="text/javascript"></script>
 </head>
   <body>
-    <style>
-    .copy{
-      margin: 20px 40px;
-    }
-    .floatL{
-      float: left;
-    }
-    .floatR{
-      float: right;
-    }
-    .images{
-      margin: 0 100px;
-    }
-    .images img{
-      display: block;
-    }
-    </style>
+<style>
+body{
+  background-color: #D93240;
+}
+.copy{
+  margin: 20px auto;
+  width: 212px;
+}
+.floatL{
+  float: left;
+}
+.floatR{
+  float: right;
+}
+.images{
+  margin: 0 60px;
+}
+.images img{
+  display: block;
+}
+.elm {
+ position: relative;
+}
+</style>
 
 
 
 
     <div class="copy">
       <p>
-        blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah tango
+        THIS PAGE IS IN PROGRESS
       </p>
 
     </div>
 
     <div class="images">
-      <div class="floatL">
-        <img src="files/c6.jpg" style="height: 280px"/>
+      <div class="elm floatL">
+        <img src="files/t1.jpg" style="width: 300px"/>
       </div>
 
-      <div class="floatR">
-        <img src="files/c7.jpg" style="height: 280px; margin-top: 100px"/>
+      <div class="elm floatR">
+        <img src="files/t2.jpg" style="width: 387px; margin-top: 234px"/>
       </div>
 
-      <div class="floatL">
-        <img src="files/c8.jpg" style="height: 280px; margin-top: 327px; margin-left: -46px;"/>
+      <div class="elm floatL">
+        <img src="files/t3.jpg" style="width: 350px; margin-top: 488px; margin-left: -234px;"/>
       </div>
 
-      <div class="floatR">
-        <img src="files/c9.jpg" style="height: 280px; margin-top: 454px; margin-right: -62px;"/>
+      <div class="elm floatR">
+        <img src="files/t6.jpg" style="width: 348px; margin-top: 161px; margin-right: 3px;"/>
+      </div>
+
+      <div class="elm floatL">
+        <img src="files/t7.jpg" style="width: 410px; margin-top: 187px; margin-left: 0px;"/>
+      </div>
+
+      <div class="elm floatR">
+        <img src="files/t4.jpg" style="width: 400px; margin-top: 161px; margin-right: -17px;"/>
+      </div>
+
+      <div class="elm floatL">
+        <img src="files/t5.jpg" style="width: 450px; margin-top: 214px; margin-left: 0px;"/>
       </div>
     </div>
 
