--- a/contact.html
+++ b/contact.html
@@ -5,32 +5,33 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
     <script type="text/javascript"></script>
 </head>
-  <body>
-    <style>
-      body{
-/*        height: 500px;*/
-        background: url('files/wallpaper5.jpg');
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-       }
-       p{
-        font-size: 18px;
-          font-weight: bold;
-        }
-    </style>
+  
+<style>
+body{
+  background-color: #C3D7DF;
+ }
+ p{
+  font-size: 28px;
+    font-weight: bold;
+    font-family: Futura;
+  }
+.contact_copy{
+  width: 400px;
+  margin: 40px auto;
+  text-align: center;
+}
+</style>
+
+<body>
 
 
-
-
-    <div>
+    <div class="contact_copy">
       <p>
         Phone: 630-659-5847
       </p>
         
       <p>
-        Email: sofyanagaslaeva@gmail.com
+        <span style="font-size:18px">Email:</span><br/> sofyanagaslaeva@gmail.com
       </p>
 
 
@@ -42,5 +43,5 @@
     <script>
 
     </script>
-  </body>
+</body>
 </html>
