--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ ul li:hover ul {
 .smll_menu {
   display: none;
 }
-@media only screen and (max-width: 786px) {
+@media only screen and (max-device-width: 786px) {
   .lrge_menu {
     display: none;
   }
@@ -207,13 +207,11 @@ ul li:hover ul {
 
 <body>
  <div class="topTop">
-  <div class="construction">
+  <!-- <div class="construction">
     The website is under re-construction. Stay tuned!
-  </div>
-
-  <!-- <div class='profilePic'>
-    <img src="files/Sofya.jpg" id="my_pic" height="300" title="Sofya Nagaslaeva" alt="Sofya Nagaslaeva">
   </div> -->
+
+
   <div class="new_fonts">
   Sofya Nagaslaeva<br/>
   <span style="font-size: 33px">HTML. CSS. JavaScript.</span>
