--- a/index.html
+++ b/index.html
@@ -134,16 +134,15 @@ ul li:hover ul {
   }
   .smll_menu {
     display: block;
-    width: 62%;
   }
   ul li ul {
-    width: 100%;
-    left: -1px;
+   /* width: 100%;
+    left: -1px;*/
   }
   ul li {
-    display: block;
+/*    display: block;
     border: 1px white solid;
-    margin-right: -2px;
+    margin-right: -2px;*/
   }
  
 }
@@ -234,15 +233,11 @@ ul li:hover ul {
 </ul>
 
 <ul class="smll_menu">
-  <li>
-    Web Developer
-    <ul>
-      <a href="files/Resume.pdf"><li>Resume</li></a>
-      <a href="portfolio.html"><li>Portfolio</li></a>
-      <a href="https://github.com/pazzissima"><li>Github</li></a>
-      <a href="http://linkedin.com/in/sofianagaslaeva/"><li>LinkedIn</li></a>
-    </ul>
-  </li>
+  <a href="files/Resume.pdf"><li>Resume</li></a>
+  <a href="portfolio.html"><li>Portfolio</li></a>
+  <a href="https://github.com/pazzissima"><li>Github</li></a>
+  <a href="http://linkedin.com/in/sofianagaslaeva/"><li>LinkedIn</li></a>
+
 </ul>
 
 </div> <!-- Toptop -->
