--- a/index.html
+++ b/index.html
@@ -128,21 +128,20 @@ ul li:hover ul {
 .smll_menu {
   display: none;
 }
-@media only screen and (max-device-width: 786px) {
+@media only screen and (max-width: 786px) {
   .lrge_menu {
     display: none;
   }
   .smll_menu {
     display: block;
+    width: 51%;
   }
   ul li ul {
    /* width: 100%;
     left: -1px;*/
   }
   ul li {
-/*    display: block;
-    border: 1px white solid;
-    margin-right: -2px;*/
+    padding: 15px 17px;
   }
  
 }
