--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ ul li:hover ul {
 .smll_menu {
   display: none;
 }
-@media (max-width: 786px) {
+@media (max-device-width: 786px) {
   .lrge_menu {
     display: none;
   }
