--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@ ul li:hover ul {
   }
   .smll_menu {
     display: block;
-    width: 64%;
+    width: 50%;
+    margin: 0 auto;
   }
   ul li ul {
    /* width: 100%;
