background in stars

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
  <style>
  body{
-    background-color: #C3D7DF;
+    /*background-color: #C3D7DF;*/
+    background-image: url("files/best-background-pics-19.jpg");
  }
  .topTop {
   height: 275px;
@@ -111,6 +112,7 @@ ul li:hover ul {
     position: relative;
     text-align: center;
     color: #8B008B;
+    background-color: rgba(255,255,255,0.8);
     margin-top: 20px;
     margin: 20px 26%;
     border: 2px solid #8B008B;
