got rid of old script

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ ul li:hover ul {
 
   
 <script>
-// Carousel
+// Responsive Carousel
 jQuery(document).ready(function(){
   jQuery('.owl-carousel').owlCarousel({
     items: 3,
@@ -264,217 +264,6 @@ jQuery(document).ready(function(){
     scrollMSG();
 </script>
 
-
-<!-- RESPONSIVE CAROUSEL -->
-<script>
-
-function wcdResponsiveCarousel(offInd,onInd) {
-  jQuery('.my-responsive-carousel__wrapper').each(function(){ 
-    var thisCarousel = new WcdCarousel(jQuery(this),offInd,onInd);
-    thisCarousel.getCurrentDimensions(false);
-    thisCarousel.setDimensions(false);
-    if (thisCarousel.showInd) {
-      thisCarousel.addIndicators();
-    }
-    thisCarousel.addEventListeners();
-  });
-}
-
-function WcdCarousel(obj,offInd,onInd) {
-  this.wrapper = obj;
-  this.currentSlide = 1;
-  this.carouselItems = this.wrapper.find('.my-responsive-carousel__items');
-  this.carouselLength = this.carouselItems.children().length;
-  this.isTwoSlides = (this.carouselLength==2) ? true : false;
-  this.hasInitialized = false;
-  this.indicatorDiv = this.wrapper.find('.my-responsive-carousel__indicators');
-  this.timer = "";
-  this.timerSet = false;
-  this.autoAdv = (obj.attr('autoAdvance')=='true') ? true : false;
-  this.showInd = (obj.attr('showIndicators')=='true') ? true : false;
-  this.offInd = (offInd) ? offInd : 'files/doc-gray-circle.png';
-  this.onInd = (onInd) ? onInd : 'http://www2.assets-gap.com/Asset_Archive/GPWeb/content/skava/assets/on.png';
-}
-
-WcdCarousel.prototype = {
-  constructor : WcdCarousel,
-  getCurrentDimensions : function(isOrientationChange) {
-    this.carouselWidth = (jQuery(window).width()>600) ? 600 : jQuery(window).width();
-    this.resetPosition = this.createTranslateString(this.carouselWidth * -1);
-    this.nextPosition = this.createTranslateString(this.carouselWidth * -2);
-    this.previousPosition = this.createTranslateString(0);
-  },
-  setDimensions : function(isOrientationChange) {
-    if (this.isTwoSlides) {
-      this.carouselItems.css({'width':this.carouselWidth * 4 + "px"});
-    }
-    else {
-      this.carouselItems.css({'width':(this.carouselWidth * this.carouselLength) + "px"});
-    }
-    this.carouselItems.children('div').css({'width':this.carouselWidth + "px"});
-    if (!this.hasInitialized) {
-        this.hasInitialized = true;
-        if (this.isTwoSlides) {
-            this.carouselItems.children('div').clone().appendTo(this.carouselItems);
-        }
-        this.wrapper.show();
-        this.repositionSlides(false);
-    }
-    if (isOrientationChange) {
-        this.translateCarousel(this.resetPosition,'0ms');
-    }
-    if (this.autoAdv) {
-        this.setAutoAdvance();
-    }
-  },
-  setAutoAdvance : function() {
-    var $this = this;
-    if (!this.timerSet) {
-      this.timer = setInterval(function() {
-        $this.advanceCarousel(300,true,true);
-      },3000);
-      this.timerSet = true;
-    }
-  },
-  repositionSlides : function(isNext) {
-    if (isNext) {
-      this.carouselItems.children().last().after(this.carouselItems.children().first());
-    }
-    else {
-      this.carouselItems.children().first().before(this.carouselItems.children().last());
-    }
-    this.translateCarousel(this.resetPosition,'0ms');
-  },
-  translateCarousel : function(translateString,translateTime) {
-    this.carouselItems.css({
-      'transform': translateString,
-      '-webkit-transform': translateString,
-      '-webkit-transition-duration':translateTime,
-      'transition-duration':translateTime
-    });
-  },
-  advanceCarousel : function(translateTime,isNext,isAuto) {
-    var $this = this;
-    var translateString = (isNext) ? this.nextPosition : this.previousPosition;
-    this.translateCarousel(translateString,translateTime + 'ms');
-    setTimeout(function() { 
-      $this.repositionSlides(isNext);
-      if ($this.autoAdv && !isAuto) {
-          $this.setAutoAdvance();
-      }
-    },translateTime);
-    if (this.showInd) {
-        (isNext) ? this.currentSlide++ : this.currentSlide--;
-        if (this.currentSlide<1) {
-            this.currentSlide = this.carouselLength;
-        }
-        else if (this.currentSlide>this.carouselLength) {
-            this.currentSlide = 1;
-        }
-        var curInd = this.indicatorDiv.find('li:nth-child(' + this.currentSlide + ') img');
-        curInd.attr('src',this.onInd);
-        this.indicatorDiv.find('li img').not(curInd).attr('src',this.offInd);
-    }
-  },
-  addIndicators : function() {
-    for (i=0;i<this.carouselLength;i++) {
-      var imgToAdd = (i==0) ? "<img src ='" + this.onInd + "' />" : "<img src ='" + this.offInd + "' />";
-      var htmlToAdd = "<li>" + imgToAdd + "</li>";
-      this.indicatorDiv.children('ul:first-child').append(htmlToAdd);
-    } //end for
-    var indicatorDivWidth = 21 * this.carouselLength + "px";
-    this.indicatorDiv.css({'width':indicatorDivWidth});
-  },
-  addEventListeners : function() {
-    var $this = this;
-    var startX,startY,startTime,startPos,deltaX,deltaY,currentPos;
-    var threshold = this.carouselWidth / 3.5;
-    var carouselView = this.wrapper.children('div.my-responsive-carousel__view');
-    
-    carouselView.on('touchstart',function(event) { 
-        var e = event.originalEvent;
-        startTime = new Date().getTime();
-        if ($this.autoAdv) {
-            clearInterval($this.timer);
-            $this.timerSet = false;
-        }
-        startPos = $this.parseMatrix($this.carouselItems.css('-webkit-transform'));
-        startX = Math.round(e.changedTouches[0].clientX);
-        startY = Math.round(e.changedTouches[0].clientY);
-        deltaX = 0;
-        deltaY = 0;
-        $this.carouselItems.css({
-            'transition-duration':'0ms',
-            '-webkit-transition-duration':'0ms'
-        });
-    });
-    
-    carouselView.on('touchmove',function(event) { 
-        var e = event.originalEvent;
-        deltaX = Math.round(e.changedTouches[0].clientX) - startX;
-        deltaY = Math.abs(e.changedTouches[0].clientY - startY);
-        if (Math.abs(deltaY) < 8) {
-          event.preventDefault();
-        }
-        if (Math.abs(deltaY) / Math.abs(deltaX)<1) {
-          var tempPos = startPos + deltaX;
-          if (tempPos>=($this.carouselWidth * -2) && tempPos<=0) {
-            currentPos = tempPos;
-            var newTranslate = $this.createTranslateString(currentPos);
-            $this.carouselItems.css({
-              'transform' : newTranslate,
-              '-webkit-transform' : newTranslate
-            });
-          }
-        }
-    });
-
-    carouselView.on('touchend',function(event){
-        if (deltaX>threshold) {
-            var translateTime = Math.abs(0 - currentPos) + 150;
-            $this.advanceCarousel(translateTime,false);
-        }
-        else if (deltaX<threshold * -1) {
-            var translateTime = Math.abs(currentPos - ($this.carouselWidth * -2)) + 150;
-            $this.advanceCarousel(translateTime,true);
-        }
-        else if (Math.abs(deltaX)<1 && Math.abs(deltaY)<1) {
-            jQuery(document).trigger('wcdResponsiveCarousel:click');
-        }
-        else {
-            var translateTime = Math.abs(currentPos - startPos) + 150 + 'ms';
-            $this.translateCarousel($this.resetPosition,translateTime);
-        }
-    });
-    jQuery(window).on('orientationchange',function() {
-        if ($this.autoAdv) {
-            clearInterval($this.timer);
-            $this.timerSet = false;
-        }
-        $this.getCurrentDimensions(true);
-    });
-  },
-  createTranslateString : function(value) {
-    var translateString = "translate3d(" + value + "px,0px,0px)";
-    return translateString;
-  },
-  parseMatrix : function(translateMatrix) {
-    var matrixString = translateMatrix.substr(translateMatrix.indexOf('(') + 1,(translateMatrix.indexOf(')') - 1) - translateMatrix.indexOf('('));
-    var matrixArray = matrixString.split(',');
-    var translateXValue = parseInt(matrixArray[4]);
-    return translateXValue;
-  }
-};
-
-
-jQuery(document).ready(function() { 
-  wcdResponsiveCarousel();
-});
-
-
-
-
-</script>
 
 
 
