--- a/index.html
+++ b/index.html
@@ -154,6 +154,9 @@ ul li:hover ul {
   .rest {
     margin-top: 20%;
   }
+  .mobileOnly{
+    display: block;
+  }
  
 }
 
@@ -206,22 +209,10 @@ ul li:hover ul {
 
 <div class="rest">
 
-  <!-- <div class="my-responsive-carousel__wrapper" autoAdvance="true" showIndicators="true" advanceSpeed="7000">
-      <div class="my-responsive-carousel__view">
-          <div class="my-responsive-carousel__items">
-              <div>
-                  <img src="files/c14.jpg" />
-              </div>
-              <div>
-                  <img src="files/c12.jpg" />
-              </div>
-              <div>
-                  <img src="files/c13.jpg" />
-              </div>
-          </div>
-      </div>
-      <div class="my-responsive-carousel__indicators"><ul></ul></div><div style="clear:both"></div>
-  </div> -->
+  <div class="mobileOnly">
+    <img src="files/c12.jpg" style="display: none"/> 
+  </div>
+
   <div class="owl-carousel owl-theme">
     <div> <img src="files/c14.jpg" /> </div>
     <div> <img src="files/c12.jpg" /> </div>
