optimized for smartphones

--- a/index.html
+++ b/index.html
@@ -154,16 +154,18 @@ ul li:hover ul {
   .rest {
     margin-top: 20%;
   }
-  .mobileOnly{
-    display: block !important;
-  }
  
 }
-
-.owl-carousel .owl-item{
-
+.mobileOnly{
+  width: 100%;
+  /*max-width: 620px;*/
+/*  margin: 0 auto;*/
 }
-
+.mobileOnly img{
+  width: 100%;
+  max-width: 620px;
+  margin: 0 auto;
+}
  </style>
 
 
@@ -210,7 +212,11 @@ ul li:hover ul {
 <div class="rest">
 
   <div class="mobileOnly">
-    <img src="files/c12.jpg" style="display: none"/> 
+    <picture>
+      <source media="(min-width: 769px)" srcset="files/clear.png">
+      <source media="(max-width: 768px)" srcset="files/red.jpg">
+      <img src="files/red.jpg">
+    </picture>
   </div>
 
   <div class="owl-carousel owl-theme">
