--- a/index.html
+++ b/index.html
@@ -131,6 +131,11 @@ ul li:hover ul {
   }
  
 }
+@media (min-width: 769px) {
+  .mobileOnly {
+    display: none;
+  }
+}
 .smll_menu {
   display: none;
 }
@@ -158,8 +163,8 @@ ul li:hover ul {
 }
 .mobileOnly{
   width: 100%;
-  /*max-width: 620px;*/
-/*  margin: 0 auto;*/
+  max-width: 620px;
+  margin: 0 auto;
 }
 .mobileOnly img{
   width: 100%;
