--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ ul li:hover ul {
   }
  
 }
-@media (min-width: 769px) {
+@media only screen and (min-width: 769px) {
   .mobileOnly {
     display: none;
   }
