--- a/index.html
+++ b/index.html
@@ -136,6 +136,11 @@ ul li:hover ul {
     display: none;
   }
 }
+@media only screen and (max-width: 768px) {
+  .mobileOnly {
+    display: block;
+  }
+}
 .smll_menu {
   display: none;
 }
