--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@ ul li:hover ul {
   }
  
 }
-@media only screen and (min-width: 769px) {
+@media (min-width: 769px) {
   .mobileOnly {
     display: none;
   }
 }
-@media only screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .mobileOnly {
     display: block;
   }
