--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ ul li:hover ul {
     display: none;
   }
 }
-@media only screen and (max-device-width: 768px) {
+@media (max-device-width: 768px) {
   .mobileOnly {
     display: block;
   }
