--- a/index.html
+++ b/index.html
@@ -16,24 +16,13 @@
 </head>
 
  <style>
+ html{
+  
+ }
  body{
   background-image: url("files/best-background-pics-19.jpg");
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  min-height: 100%;
-  min-width: 1024px;
-  
-  /* Set up proportionate scaling */
-  width: 100%;
-  height: auto;
-  
-  /* Set up positioning */
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
+  background-repeat: no-repeat;
+    background-size: 100% 100%;
     /*background-color: #C3D7DF;*/
  }
  .topTop {
