--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
  }
  body{
   background-image: url("files/best-background-pics-19.jpg");
-  background-repeat: no-repeat;
-    background-size: 100% 100%;
+  /*background-repeat: no-repeat;
+    background-size: 100% 100%;*/
     /*background-color: #C3D7DF;*/
  }
  .topTop {
