--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta name="description" content="Sofya Nagaslaeva's Website">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/x-icon" href="files/icon.ico" />
   <link rel="stylesheet" style="text/css" href="css/cat.css">
   <link href="css/owl.carousel.css" rel="stylesheet">
@@ -17,7 +18,7 @@
 
  <style>
  html{
-  
+  overflow-y: scroll;
  }
  body{
   background-image: url("files/best-background-pics-19.jpg");
