--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ ul li:hover ul {
     display: none;
   }
 }
-@media (max-width: 768px) {
+@media only screen and (max-device-width: 786px) {
   .mobileOnly {
     display: block;
   }
