--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="description" content="Sofya Nagaslaeva's Website">
-<!--   <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+  <meta name="viewport" content="initial-scale=1.0">
   <link rel="shortcut icon" type="image/x-icon" href="files/icon.ico" />
   <link rel="stylesheet" style="text/css" href="css/cat.css">
   <link href="css/owl.carousel.css" rel="stylesheet">
@@ -144,7 +144,7 @@ ul li:hover ul {
     display: none;
   }
 }
-@media only screen and (max-device-width: 786px) {
+@media (max-width: 768px) {
   .mobileOnly {
     display: block;
   }
