--- a/index.html
+++ b/index.html
@@ -236,11 +236,11 @@ ul li:hover ul {
 <div class="rest">
 
   <div class="mobileOnly">
-    <picture>
+<!--     <picture>
       <source media="(min-width: 769px)" srcset="files/clear.png">
-      <source media="(max-width: 768px)" srcset="files/red.jpg">
+      <source media="(max-width: 768px)" srcset="files/red.jpg"> -->
       <img src="files/red.jpg">
-    </picture>
+<!--     </picture> -->
   </div>
 
 
