--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@ ul li:hover ul {
     border-radius: 2%;
 }
 @media (max-width: 800px) {
-  .topTop {
+ /* .topTop {
     height: 368px;
-  }
+  }*/
   ul {
     margin: 12px auto;
   }
