--- a/index.html
+++ b/index.html
@@ -28,18 +28,11 @@
  }
  .topTop {
   height: 275px;
+  position: relative;
  }
- .construction{
-  text-align: center;
- }
-.profilePic{
-  position: absolute;
-  top: 40px;
-  margin: 0 39%;
-  height: 428px;
-}
 .rest{
   text-align: center;
+  position: relative;
 }
 ul li ul a:hover {
   text-decoration: none;
@@ -177,9 +170,10 @@ ul li:hover ul {
  
 }
 .mobileOnly{
-  width: 100%;
+  width: 70%;
   max-width: 620px;
   margin: 0 auto;
+  position: relative;
 }
 .mobileOnly img{
   width: 100%;
@@ -282,7 +276,7 @@ ul li:hover ul {
 var myVar;
 
 function myFunction() {
-    myVar = setTimeout(showPage, 3000);
+    myVar = setTimeout(showPage, 1000);
 }
 
 function showPage() {
