--- a/index.html
+++ b/index.html
@@ -30,9 +30,17 @@
   height: 275px;
   position: relative;
  }
+ .construction{
+  text-align: center;
+ }
+.profilePic{
+  position: absolute;
+  top: 40px;
+  margin: 0 39%;
+  height: 428px;
+}
 .rest{
   text-align: center;
-  position: relative;
 }
 ul li ul a:hover {
   text-decoration: none;
@@ -173,7 +181,6 @@ ul li:hover ul {
   width: 70%;
   max-width: 620px;
   margin: 0 auto;
-  position: relative;
 }
 .mobileOnly img{
   width: 100%;
@@ -182,7 +189,6 @@ ul li:hover ul {
 }
 .loader {
   position: relative;
-  z-index: 100;
 }
 
  </style>
