--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ ul li:hover ul {
     margin: 0 auto;
   }
   .rest {
-    margin-top: 20%;
+    margin-top: 10%;
   }
   .new_fonts {
     margin: 20px 12%;
@@ -180,7 +180,7 @@ ul li:hover ul {
 .mobileOnly{
   width: 70%;
   max-width: 620px;
-  margin: 0 auto;
+  margin: 0 auto 20px;
 }
 .mobileOnly img{
   width: 100%;
