donate button added

--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,10 @@ body{
   margin: 40px auto;
   text-align: center;
 }
+.donate{
+  position: relative;
+  text-align: center;
+}
 </style>
 
 <body>
@@ -35,6 +39,31 @@ body{
       </p>
 
 
+    </div>
+
+    <div class="donate">
+      <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+
+        <!-- Identify your business so that you can collect the payments. -->
+        <input type="hidden" name="business"
+            value="morgana84@mail.ru">
+
+        <!-- Specify a Donate button. -->
+        <input type="hidden" name="cmd" value="_donations">
+
+        <!-- Specify details about the contribution -->
+        <input type="hidden" name="item_name" value="Donation">
+        <input type="hidden" name="item_number" value="Donate to my happy life">
+        <input type="hidden" name="currency_code" value="USD">
+
+        <!-- Display the payment button. -->
+        <input type="image" name="submit"
+        src="https://www.paypalobjects.com/webstatic/en_US/i/btn/png/btn_donate_92x26.png"
+        alt="Donate">
+        <img alt="" width="1" height="1"
+        src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" >
+
+      </form>
     </div>
 
 
