fixed positioning of projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
       </li><br/> -->
       <li>
         <a href="https://github.com/pazzissima/final_project" target="_blank">Better News</a><br>
-          <figure><img src="files/better_news.jpg" style="float: right; margin:0 70px 0 20px;"></figure>
+          <figure><img src="files/better_news.jpg"></figure>
         <p>This is a "Better Facebook" application. It allows users to login fith the Facebook account, see all the news feed from Facebook and sort it by the type of content. It also lets users upload and store images that are visible to all the 'Better News' users but don't get published on Facebook itself. Technologies I used include Ruby on Rails, AngularJS, Sidekiq, Redis, S3, Paperclip, etc.
       </li>
     </ol>
