--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
       <li class="oneProject">
         <a href="projects/fall_leaves/index.html" target="_blank">Fall Leaves</a><br>
         <a href="projects/fall_leaves/index.html" target="_blank">
-          <figure><img src="projects/fall_leaves/images/leaves_project.jpg" alt="Fall Leaves" title="Fall Leaves"></figure>
+          <figure><img class="projectImg" src="projects/fall_leaves/images/leaves_project.jpg" alt="Fall Leaves" title="Fall Leaves"></figure>
         </a>
         <p>This is one of my side projects. <br>Experimenting with JavaScript.
       </li><br>
@@ -75,14 +75,6 @@
     scrollMSG();
   </script>
 
-
-  <script>
-    jQuery(document).ready(function() {
-      $('.oneProject').hover(function() {
-        console.log('hey!')
-      });
-    });
-  </script>
 </body>
 
 
