--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
       <li class="oneProject">
         <a href="projects/fall_leaves/index.html" target="_blank">Fall Leaves</a><br>
         <a href="projects/fall_leaves/index.html" target="_blank">
-          <figure><img class="projectImg" src="projects/fall_leaves/images/leaves_project.jpg" alt="Fall Leaves" title="Fall Leaves"></figure>
+          <figure><img src="projects/fall_leaves/images/leaves_project.jpg" alt="Fall Leaves" title="Fall Leaves"></figure>
         </a>
         <p>This is one of my side projects. <br>Experimenting with JavaScript.
       </li><br>
@@ -74,6 +74,15 @@
     }
     scrollMSG();
   </script>
+
+  <!-- <script>
+    jQuery(document).ready(function() {
+      $('a[href*="Fall Leaves"]').hover(function() {
+        $('a[href*="Fall Leaves"]').css('font-size', '3em');
+        console.log('damn')
+      });
+    });
+  </script> -->
 
 </body>
 
