--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <script src="js/app.js"></script>
   
   <script src="http://d3js.org/d3.v3.min.js" type="text/javascript" charset="utf-8"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
+  
     <script type="text/javascript"></script>
 </head>
 
