--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ ul li:hover ul {
   <li>
     Web Developer
     <ul>
-      <a href="files/Resume_021918.pdf"><li>Resume</li></a>
+      <a href="files/Resume.pdf"><li>Resume</li></a>
       <a href="portfolio.html"><li>Portfolio</li></a>
       <a href="https://github.com/pazzissima"><li>Github</li></a>
       <a href="http://linkedin.com/in/sofianagaslaeva/"><li>LinkedIn</li></a>
@@ -226,7 +226,7 @@ ul li:hover ul {
 </ul>
 
 <ul class="smll_menu">
-  <a href="files/Resume_021918.pdf"><li>Resume</li></a>
+  <a href="files/Resume.pdf"><li>Resume</li></a>
   <a href="portfolio.html"><li>Portfolio</li></a>
   <a href="https://github.com/pazzissima"><li>Github</li></a>
   <a href="http://linkedin.com/in/sofianagaslaeva/"><li>LinkedIn</li></a>
